# simple-sgm

./: .clang-format  CMakeLists.txt  README.md  conanfile.py  simple-sgm.sln
simple-sgm/: CMakeLists.txt  ErrorHandling.h  Utils.h  sgm.h  simple-sgm.cpp  simple-sgm.vcxproj  simple-sgm.vcxproj.filters  stdafx.cpp
simple-sgm/apps/: CMakeLists.txt  simple-sgm.cpp  utils.h
simple-sgm/sgm/: CMakeLists.txt
simple-sgm/sgm/include/sgm/: sgm.h  sgm_utils.h
